--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 # Set the port to the PORT environment variable
 server.port=${PORT:8080}
 spring.cloud.gcp.logging.enabled=true
+spring.cloud.gcp.credentials.location=classpath:gcloud.json
+#spring.cloud.gcp.credentials.location=file:path_file_credential.json
